# SLucAM

./: .gitignore  CMakeLists.txt  README.md  clear_results.sh
data/: TEST.yml
data/datasets/fr1_xyz/: SLucAM_results_orb.txt
data/datasets/fr2_desk/: SLucAM_results_lf_net.txt
evaluation/: evaluate_desk.sh  evaluate_fr2_desk.sh  evaluate_xyz.sh
include/: SLucAM_dataset.h  SLucAM_geometry.h  SLucAM_image.h  SLucAM_initialization.h  SLucAM_keyframe.h  SLucAM_keypoint.h  SLucAM_matcher.h  SLucAM_measurement.h  SLucAM_state.h
plots/: generate_video.sh  load_poses.m  main.m  my_subplotter.m  plot_image_points.m  plot_keyframe.m  plot_landmarks.m  plot_poses.m  test.m
src/: CMakeLists.txt  SLucAM_dataset.cpp  SLucAM_geometry.cpp  SLucAM_image.cpp  SLucAM_initialization.cpp  SLucAM_keyframe.cpp  SLucAM_keypoint.cpp  SLucAM_matcher.cpp  SLucAM_measurement.cpp  SLucAM_state.cpp  main.cpp
